See #2061 Fixed add to cart button appearance on compare page on mobile layout, fixed share wishlist popup translation issue that crashed project start

--- a/packages/scandipwa/src/component/ProductCompareItem/ProductCompareItem.style.scss
+++ b/packages/scandipwa/src/component/ProductCompareItem/ProductCompareItem.style.scss
@@ -77,6 +77,12 @@
         }
     }
 
+    &-AddToCartBtnWrapper {
+        display: block;
+        width: 100%;
+        margin: 0;
+    }
+
     &-AddToCartBtn {
         flex: 0 0 auto;
         width: 100%;
